--- a/css/helper.css
+++ b/css/helper.css
@@ -93,6 +93,9 @@
 .br-10 {
   border-radius: 10px !important;
 }
+.fw-100 {
+  font-weight: 100 !important;
+}
 .fw-400 {
   font-weight: 400 !important;
 }
@@ -120,22 +123,25 @@
   color: #000000;
 }
 .text_darkblack {
-  color: #1c1c1e;
+  color: #1c1c1e !important;
 }
 .text_grey {
   color: #8e8e93;
 }
 .text-orange {
-  color: #ffa920;
+  color: #ffa920 !important;
 }
 .text_lightgrey {
   color: #3a3a3c;
 }
 .bg_primary {
-  background-color: #ffa920;
+  background-color: #ffa920 !important;
 }
 .bg_secondary {
-  background-color: #fff5e0;
+  background-color: #fff5e0 !important;
+}
+.bg_lightgrey{
+  background-color: #3a3a3c;
 }
 .shadow_sm {
   box-shadow: 0px 4px 26px 0px #42474c14;
@@ -143,13 +149,26 @@
 .shadow_light {
   box-shadow: 0px 4px 18px 0px #42474c1a;
 }
+.bg_darkblack {
+  background-color: #1c1c1e;
+}
 .yellow_gradient {
   background: linear-gradient(
     to top,
     white 0%,
-    white 10%,
+    white 40%,
     #ffa920 0%,
-    #ffa920 80%,
-    #ffa920 80%
+    #ffa920 60%,
+    #ffa920 60%
+  );
+}
+.secondary_gradient {
+  background: linear-gradient(
+    to top,
+    white 0%,
+    white 35%,
+    #fff5e0 0%,
+    #fff5e0 65%,
+    #fff5e0 65%
   );
 }
