--- a/css/style.css
+++ b/css/style.css
@@ -71,3 +71,86 @@ html {
   right: 4.6%;
   top: 3.2%;
 }
+.imgtext{
+  position: absolute;
+  left: 7%;
+  bottom: 2%;
+}
+
+.imghover:hover .img_description {
+  visibility: visible;
+  opacity: 1;
+}
+
+.img_description {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 1.5%;
+  right: 1.5%;
+  background: #6d6d6d;
+  color: #fff;
+  visibility: hidden;
+  opacity: 0;
+  display: flex;
+  flex-direction: column;
+  place-content: center;
+  border-radius: 10px;
+  transition: opacity .8s, visibility .9s;
+}
+
+.owlDots .owl-dot.active span {
+  height: 5px !important;
+  width: 64px !important;
+  display: block !important;
+  background-color: 
+  #FFA920 !important;
+  border-radius: 0px !important;
+}
+
+.owlDots .owl-dot span {
+  height: 5px !important;
+  width: 40px !important;
+  display: block !important;
+  background-color: 
+  #FFF5E0 !important;
+  margin-top: 30px !important;
+  border-radius: 0px !important;
+}
+.happyCustomers{
+  position: absolute;
+z-index: -1;
+top: 33%;
+}
+.testimonials_img{
+  position:absolute;
+  top: -13%;
+  left: 44%;
+}
+.squarebox{
+  width: 60px;
+  height: 60px;
+  border-radius: 10px;
+  background-color: 
+  #D9D9D9;
+}
+.contactsellerbtn{
+  position: absolute;
+  left: 29%;
+  bottom: -15%;
+}
+.border_bottom{
+  border-bottom:1px solid rgb(147 140 140 / 21%);
+}
+.textfield{
+  font-size: 14px !important;
+}
+.btnsignup{
+  background-color: #3a3a3c !important;
+  padding: 9px 18px !important;
+  font-size: 14px !important;
+}
+.mobilebannerform{
+  position: absolute;
+  top: 50%;
+}
