--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -1,3 +1,12 @@
+@media (min-width: 1024px) and (max-width: 1199px) {
+    .bannerText {
+        left: 30% !important;
+        top: 34% !important;
+    }
+    .bannerForm{
+        left: 20% !important;
+    }
+}
 @media (min-width: 768px) and (max-width: 1023px) {
     .fs-40{
         font-size: 28px !important;
